Updated CSS for Form, Individual and Listing, Fixed Spacing Issues, Added Email Feature Linked to Individual Property

--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -10,6 +10,13 @@ body
 
 }
 
+.flashes
+{
+
+    background-color: #14b7a7;
+
+}
+
 .bi
 {
 
@@ -46,6 +53,13 @@ body
     font-weight: bold;
     padding: 10px 0;
     margin: 0;
+
+}
+
+.form-control
+{
+
+    width: auto-fit;
 
 }
 
@@ -92,14 +106,6 @@ input[type="file"]
 .image
 {
 
-    width: auto;
-    height: auto;
-
-}
-
-.property .image
-{
-
     width: 100%;
     height: 100%;
 
@@ -122,7 +128,11 @@ input[type="file"]
 
 }
 
-.properties .price, .property .price, .property .type
+.properties .price, 
+.property .price, 
+.property .type, 
+.estate .price,
+.estate .type 
 {
 
     position: relative;
@@ -137,13 +147,22 @@ input[type="file"]
 
 }
 
-.property .type
+.property .type,
+.estate .type 
 {
 
     background-color: #f8d617;
     width: 70px;
 
 }
+
+.emailing .price, .emailing .type 
+{
+
+    margin: 20px 0px 20px 0px;
+
+}
+
 
 .information
 {
@@ -161,7 +180,7 @@ input[type="file"]
 
 }
 
-.information .title
+.information .title, .estate .title
 {
 
     font-size: 30px;
@@ -169,11 +188,11 @@ input[type="file"]
 
 }
 
-.information .overview
+.information .info, .estate .info
 {
 
     display: grid;
-    grid-template-columns: repeat(2, 400px);
+    grid-template-columns: repeat(2, 100px);
     grid-gap: 10px;
 
 }
@@ -185,3 +204,85 @@ input[type="file"]
     grid-template-columns: repeat(2, 130px);
 
 }
+
+.contact 
+{
+
+    margin: 250px 20px 20px 20px;
+
+}
+
+.contact .card-body
+{
+
+    padding: 0px;
+
+}
+
+.emailing
+{
+
+    display: flex;
+    flex-direction: column;
+    font-weight: thin;
+    font-size: 12px;
+    padding: 40px;
+    align-items: stretch; /* Stretch items vertically */
+    
+}
+
+.emailing .details
+{
+
+    display: grid;
+    grid-template-columns: repeat(2, minmax(200px, 1fr));
+    grid-gap: 10px;
+
+
+}
+
+.emailing .forming
+{
+
+    display: grid;
+    grid-template-rows: repeat(2, minmax(50px, 1fr));
+
+}
+
+.emailing input::placeholder, .emailing textarea::placeholder 
+{
+
+    color: #999; 
+    opacity: 0.7; 
+    font-size: 12px;
+
+
+}
+
+#name, #email, #subject, #message
+{
+
+    width: auto-fit;
+    height: auto-fit;
+    border: transparent;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    border-radius: 5px;
+}
+
+.submission 
+{
+
+    margin-top: 10px;
+    display: flex;
+    justify-content: flex-end;
+
+}
+
+.submission .btn 
+{
+
+    flex: 1;
+
+}
+
+
